--- a/index.html
+++ b/index.html
@@ -17,45 +17,57 @@
   </head>
   <body>
     <div class="page">
-      <header>
-        <img src="assets/logo.svg" alt="logo de sorvete de casquinha roxo" />
-        <h1>space cream</h1>
-      </header>
+      <div class="col-2">
+        <div class="desktop">
+          <header>
+            <img
+              src="assets/logo.svg"
+              alt="logo de sorvete de casquinha roxo"
+            />
+            <h1>space cream</h1>
+          </header>
 
-      <main>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a
-          rhoncus leo. Donec at scelerisque magna. Nullam vitae neque sit amet
-          erat dignissim cursus ac ac lectus. Aliquam erat volutpat. Praesent at
-          quam aliquet,
-        </p>
-
-        <div class="cards-field">
-          <div class="card">
-            <h2>paletas</h2>
-            <img src="assets/sorvete1.png" alt="" />
-          </div>
-
-          <div class="card">
-            <h2>shakes</h2>
-            <img src="assets/sorvete2.png" alt="" />
-          </div>
-
-          <div class="card">
-            <h2>massas</h2>
-            <img src="assets/sorvete3.png" alt="" />
-          </div>
-
-          <div class="card">
-            <h2>picolés</h2>
-            <img src="assets/sorvete4.png" alt="" />
-          </div>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a
+            rhoncus leo. Donec at scelerisque magna. Nullam vitae neque sit amet
+            erat dignissim cursus ac ac lectus. Aliquam erat volutpat. Praesent
+            at quam aliquet,
+          </p>
         </div>
 
-        <footer>
-          <p>feito com 💗 por <a target="_blank" href="https://github.com/flaviarafaelle">Flávia Santos</a></p>
-        </footer>
-      </main>
+        <main>
+          <div class="cards-field">
+            <div class="card">
+              <h2>paletas</h2>
+              <img src="assets/sorvete1.png" alt="" />
+            </div>
+
+            <div class="card">
+              <h2>shakes</h2>
+              <img src="assets/sorvete2.png" alt="" />
+            </div>
+
+            <div class="card">
+              <h2>massas</h2>
+              <img src="assets/sorvete3.png" alt="" />
+            </div>
+
+            <div class="card">
+              <h2>picolés</h2>
+              <img src="assets/sorvete4.png" alt="" />
+            </div>
+          </div>
+        </main>
+      </div>
+
+      <footer>
+        <p>
+          feito com 💗 por
+          <a target="_blank" href="https://github.com/flaviarafaelle"
+            >Flávia Santos</a
+          >
+        </p>
+      </footer>
     </div>
   </body>
 </html>
